<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".activities.MainActivity">

    <ProgressBar
        android:id="@+id/loading_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:indeterminate="true"
        android:indeterminateTint="#000000"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/loadingtxt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="#000000"
        android:textStyle="bold"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="233dp"
            android:contentDescription="@string/ekridar_logo"
            app:srcCompat="@drawable/ic_darkre" />

        <TextView
            android:id="@+id/Fullname_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/adresse_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#000000"
            android:backgroundTintMode="src_in"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/Password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/mot_de_passe"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#000000"
            android:backgroundTintMode="src_in"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/stay_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#000000"
            android:fontFamily="@font/aclonica"
            android:hapticFeedbackEnabled="false"
            android:text="@string/rester_connect"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="13sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="100dp"
            android:text="@string/s_identifier"
            app:cornerRadius="50dp" />

        <TextView
            android:id="@+id/login_resetview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:text="@string/mot_de_passe_oubli_reinitlialiser"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/login_signupview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:text="@string/vous_n_avez_pas_de_compte_s_inscrire"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>