<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".activities.CreatePost">
    <ProgressBar
        android:id="@+id/loading_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/colorPrimary"
        >
    </ProgressBar>

    <TextView
        android:id="@+id/loadingtxt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone">
    </TextView>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="end">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00008577"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:navigationIcon="@drawable/ic_baseline_menu_24" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="6dp">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/create_post_slider"
                        android:layout_width="match_parent"
                        android:layout_height="223dp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="@color/colorPrimaryDark"
                        app:sliderIndicatorUnselectedColor="#FFF"
                        app:sliderScrollTimeInSec="5"
                        app:sliderStartAutoCycle="true" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="19dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/gouv"
                        android:textColor="@android:color/black" />

                    <Spinner
                        android:id="@+id/region_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="19dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/delegations"
                        android:textColor="@android:color/black" />

                    <Spinner
                        android:id="@+id/in_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_weight="3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="19dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/ville"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/city_edit"
                        android:layout_width="168dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:ems="10"
                        android:gravity="bottom"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/group_btns"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:checkedButton="@+id/radioButton4"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/residence" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/maison" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/group_btns2"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:checkedButton="@+id/meuble"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/meuble"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/meuble" />

                    <RadioButton
                        android:id="@+id/nomeuble"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/non_meuble" />
                </RadioGroup>


                <EditText
                    android:id="@+id/create_post_desc"
                    android:layout_width="match_parent"
                    android:layout_height="162dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLength="249" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="35dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="S+"
                        android:textColor="@android:color/black" />

                    <Spinner
                        android:id="@+id/create_post_room"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <TextView
                        android:id="@+id/btn"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/prix_mois_en_dt"
                        android:textColor="@android:color/black" />

                    <EditText
                        android:id="@+id/create_post_price"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:inputType="number" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnPost"
                        android:layout_width="223dp"
                        android:layout_height="58dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="60dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/publier"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="20dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/header"
            app:menu="@menu/main_menu" />

    </androidx.drawerlayout.widget.DrawerLayout >
</LinearLayout>